# web_application

./: catalog.html  contacts.html  index.html  main.py  pyproject.toml
