[project]
name = "web-application"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolay Kydrushov",email = "nnikolay2909@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"
pytest-cov = "^7.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^7.0.0"

